@@ -15,6 +15,8 @@ The following classes have been added:
 - GModelSpectralExpInvPlaw
 - GModelSpectralPlawEnergyFlux
 - GModelSpectralMultiplicative
+- GModelSpectralComposite
+- GModelSpatialComposite
 - GVOTable
 - GNdarray
 - GFft
@@ -155,6 +157,10 @@ power law. The cut-off parameter is the inverse of the cut-off energy
 
 The GModelSpectralMultiplicative class has been added that implements the
 product of spectral model components as a new spectral model (#1861).
+
+The GModelSpectralComposite and GModelSpatialComposite classes have been
+added that implement composite spectral and spatial models, which are sums
+of models as a new model component (#1706).
 
 
 9. Numerics module
